--- a/app/views/pages/sign_up.html.erb
+++ b/app/views/pages/sign_up.html.erb
@@ -1,26 +1,30 @@
-<h1>You made it to the sign up page</h1>
-<%= form_for @user, url: {action: "send_sign_up"} do |f| %>
-  <div class="form-group">
-    <%=f.label 'First Name:', :class => "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%=f.text_field :firstname, :class =>"form-control" %>
-    </div>
+<div class="container">
+  <div class="col-sm-offset-2 col-sm-10">
+    <h2> Sign Up For Our Monthly Newsletter: </h2>
   </div>
-  <div class="form-group">
-    <%=f.label 'Last Name:', :class => "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%=f.text_field :lastname, :class =>"form-control" %>
+  <%= form_for @user, url: {action: "send_sign_up"}, html: {class: "form-horizontal"} do |f| %>
+    <div class="form-group">
+      <%=f.label 'First Name:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :firstname, :class =>"form-control" %>
+      </div>
     </div>
-  </div>
-  <div class="form-group form-cell">
-    <%= label_tag(:email, "Email:", :class => "sign-up-label") %>
-    <div >
-      <%=email_field_tag :email, "", class: 'form-control sign-up-field'%>
+    <div class="form-group">
+      <%=f.label 'Last Name:', :class => "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%=f.text_field :lastname, :class =>"form-control" %>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%=f.submit "Sign Me Up!", :class => "btn btn-primary" %>
+    <div class="form-group">
+      <%= label_tag(:email, "Email:", :class => "col-sm-2 control-label") %>
+      <div class="col-sm-10">
+        <%=email_field_tag :email, "", class: 'form-control'%>
+      </div>
     </div>
-  </div>
-<% end %>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%=f.submit "Sign Me Up!", :class => "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
+</div>
