--- a/app/views/pages/sign_up.html.erb
+++ b/app/views/pages/sign_up.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-offset-2 col-sm-10">
     <h2> Sign Up For Our Monthly Newsletter: </h2>
   </div>
-  <%= form_for @user, url: {action: "send_sign_up"}, html: {class: "form-horizontal"} do |f| %>
+  <%= form_for @user, url: {action: "send_sign_up"}, html: {name: "registration", class: "form-horizontal"} do |f| %>
     <div class="form-group">
       <%=f.label 'First Name:', :class => "col-sm-2 control-label" %>
       <div class="col-sm-10">
