Finalize front end and server side validation

--- a/app/views/pages/sign_up.html.erb
+++ b/app/views/pages/sign_up.html.erb
@@ -42,7 +42,7 @@
         var mail=document.forms["registration"]["email"].value;
         if (first==null || first=="" || last==null || last=="" || mail==null || mail=="")
         {
-            alert("Please Fill All Required Fields");
+            alert("Please Fill In All Required Fields");
         }
     }
 </script>
